force-app/main/default/objects/CAPA__c/CAPA__c.object-meta.xml
<CustomObject>
    <description>Corrective and Preventive Actions linked to NCRs to close quality gaps on EPC projects.</description>
    <label>CAPA</label>
    <nameField>
        <displayFormat>CAPA-{00000}</displayFormat>
        <label>CAPA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CAPAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>