force-app/main/default/objects/CAPA__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action Description</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>