force-app/main/default/objects/CAPA__c/fields/NCR__c.field-meta.xml
<CustomField>
    <fullName>NCR__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>NCR</label>
    <referenceTo>NCR__c</referenceTo>
    <relationshipLabel>CAPAs</relationshipLabel>
    <relationshipName>CAPAs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>