force-app/main/default/objects/CAPA__c/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Action Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>CAPAs (Action Owner)</relationshipLabel>
    <relationshipName>CAPAs_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>