force-app/main/default/objects/CAPA__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Corrective</fullName>
                <default>true</default>
                <label>Corrective</label>
            </value>
            <value>
                <fullName>Preventive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>