force-app/main/default/objects/CAPA__c/fields/Verification__c.field-meta.xml
<CustomField>
    <fullName>Verification__c</fullName>
    <label>Verification Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>